# zeptrion_python

./: .gitignore  pyproject.toml
examples/: example.py
pyzeptrion/: __init__.py  blind.py  bulb.py  cli.py  device.py  discover.py
