# pyproject.toml

[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyzeptrion"
version = "0.1.1"
description = "Classes to interact with Zeptrion devices made by Feller"
readme = "README.md"
authors = [{ name = "Thierry Perroud", email = "astronaut@footprintsonthemoon.ch" }]
license = { "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Topic :: Home Automation",
]

keywords = ["zeptrion", "home assistant", "library"]
dependencies = [
    "asyncio",
    "aiohttp",
]
requires-python = ">=3.8"

[project.urls]
homepage = "https://github.com/footprintsonthemoon/pyzeptrion"
documentation = "https://github.com/footprintsonthemoon/pyzeptrion"
repository = "https://github.com/footprintsonthemoon/pyzeptrion"
